Add fixtures from oslo
Change-Id: Ie8d1fb0af22ca412c421a1c70cc04d5ec13d7fec

--- a/openstack-common.conf
+++ b/openstack-common.conf
@@ -14,6 +14,7 @@ module=jsonutils
 module=timeutils
 module=local
 module=notifier
+module=fixture
 
 # The base module to hold the copy of openstack.common
 base=dnrm
