NBL-67. REST API Implementation
DNRM REST API implementation, unit tests, sqlite database
configuration

Change-Id: I94c78f607492c711f6753328505d396fc728df22

--- a/etc/api-paste.ini
+++ b/etc/api-paste.ini
@@ -6,4 +6,4 @@ use = egg:Paste#urlmap
 paste.filter_factory = keystoneclient.middleware.auth_token:filter_factory
 
 [app:dummyapp]
-paste.app_factory = dnrm.api:APIRouter.factory
+paste.app_factory = dnrm.api.router:APIRouter.factory
