--- a/tox.ini
+++ b/tox.ini
@@ -37,4 +37,4 @@ commands = {posargs}
 ignore = E711,E712,E125,H233,H301,H302,H404
 show-source = true
 builtins = _
-exclude = .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,tools,build*
+exclude = .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,tools,build*,*alembic*
