--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ Babel>=0.9.6
 
 -f http://tarballs.openstack.org/oslo.config/oslo.config-1.2.0a3.tar.gz#egg=oslo.config-1.2.0a3
 oslo.config>=1.2.0a3
+python-novaclient==2.14.1
