--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ pip-log.txt
 .coverage
 .tox
 nosetests.xml
+cover
 
 # Translations
 *.mo
@@ -40,3 +41,6 @@ nosetests.xml
 
 # Emacs tmp files
 *~
+AUTHORS
+ChangeLog
+
