--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ eventlet>=0.13.0
 python-keystoneclient>=0.3.0
 WebOb>=1.2
 Babel>=0.9.6
+SQLAlchemy>=0.7.8,<=0.7.99
 
 -f http://tarballs.openstack.org/oslo.config/oslo.config-1.2.0a3.tar.gz#egg=oslo.config-1.2.0a3
 oslo.config>=1.2.0a3
